Tue June 13 2015.
Summary for 0.3.2 podcastdl release
	Fix a bug caused by changes in the url control by curl

Tue Aug 14 2012.
Summary for 0.3.1 podcastdl release

Tue Aug 14 2012.
Summary for 0.3.0 podcastdl release
	Convert the build system to CMake
	Fix filename hadling using guid if available instead of enclosure_url
	Fix compatibility with other Unixes using time.h instead of sys/time.h

Sun Jun 05 2011.
Summary for 0.2.1 podcastdl release
	First public version